--- a/Source/Server/apps/mpconsole/templates/software/software_task_modify.html
+++ b/Source/Server/apps/mpconsole/templates/software/software_task_modify.html
@@ -91,7 +91,7 @@
 							</div>
 							<div class="col-md-5">
 								<div class='input-group date' id='sw_start_datetime'>
-									<input class="form-control" type="text" name="sw_start_datetime" value="{{data['Task']['sw_start_datetime'] or '' }}">
+									<input class="form-control" type="text" name="sw_start_datetime" value="{{data['Task']['sw_start_datetime'] or '1970-01-01 12:00:00' }}">
 									<span class="input-group-addon">
 										<span class="glyphicon glyphicon-calendar"></span>
 									</span>
@@ -107,7 +107,7 @@
 							</div>
 							<div class="col-md-5">
 								<div class='input-group date' id='sw_end_datetime'>
-									<input class="form-control" type="text" name="sw_end_datetime" value="{{data['Task']['sw_end_datetime'] or '' }}">
+									<input class="form-control" type="text" name="sw_end_datetime" value="{{data['Task']['sw_end_datetime'] or '1970-01-01 12:00:00' }}">
 									<span class="input-group-addon">
 										<span class="glyphicon glyphicon-calendar"></span>
 									</span>
@@ -152,7 +152,7 @@
 			$(document).ready(function()
 			{
 				$('#sw_start_datetime').datetimepicker({
-					defaultDate: '{{data['Task']['sw_start_datetime'] or ''}}',
+					defaultDate: '{{data['Task']['sw_start_datetime'] or '1970-01-01 12:00:00'}}',
 					format: 'yyyy-mm-dd HH:ii:ss'
 				});
 				$('#sw_end_datetime').datetimepicker( {
