--- a/Source/Server/apps/mpconsole/templates/adm_agent_deploy.html
+++ b/Source/Server/apps/mpconsole/templates/adm_agent_deploy.html
@@ -25,7 +25,7 @@
 			Client Agent - Deployment
 		</div>
 		<div class="col-lg-6 col-xs-12 text-right">
-			<button class="btn btn-default" onclick='download("/mp-content/clients/{{curAgentID}}/MPClientInstall.pkg.zip")'>
+			<button class="btn btn-default" onclick='download("/mp-content/clients/{{curAgentID}}/MacPatch.pkg.zip")'>
 				<span class="glyphicon glyphicon-save"></span> Current Client Agent
 			</button>
 			<button class="btn btn-default" onclick='download("/mp-content/tools/MPAgentUploader.zip")'>
