Update Console for ARM

--- a/Source/Server/apps/mpconsole/templates/patches/custom_patch_wizard.html
+++ b/Source/Server/apps/mpconsole/templates/patches/custom_patch_wizard.html
@@ -248,12 +248,12 @@
 									{% endif %}
 									{% endfor %}
 									<option>X86</option>
-									<option>PPC</option>
-									<option>PPC, X86</option>
+									<option>ARM</option>
+									<option>X86,ARM</option>
 								</select>
 							</div>
 							<div class="col-md-3">
-								<small>(e.g. "PPC, X86"; Universal)</small>
+								<small>(e.g. "ARM, X86"; Universal)</small>
 							</div>
 						</div>
 
