--- a/Source/Server/apps/mpconsole/templates/software/software_pkg_wizard.html
+++ b/Source/Server/apps/mpconsole/templates/software/software_pkg_wizard.html
@@ -624,7 +624,8 @@
 							alert("Software Package Failed to Save");
 							res = false;
 							$('#overlay').hide();
-						}
+						},
+						timeout: 0
 					});
 					return res;
 				},
