--- a/Source/MacPatch/MPClientStatus/MPClientStatus/Provisioning.xib
+++ b/Source/MacPatch/MPClientStatus/MPClientStatus/Provisioning.xib
@@ -205,6 +205,17 @@
                             <action selector="skipTab:" target="-2" id="GwD-lN-OLy"/>
                         </connections>
                     </button>
+                    <button hidden="YES" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="i1c-xD-mVl">
+                        <rect key="frame" x="174" y="10" width="56" height="32"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <buttonCell key="cell" type="push" title="JS" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="u1J-m2-Sxt">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                        </buttonCell>
+                        <connections>
+                            <action selector="writeJS:" target="-2" id="Wkl-JI-G9c"/>
+                        </connections>
+                    </button>
                 </subviews>
             </view>
             <point key="canvasLocation" x="-1306" y="-598"/>
