Update Provisioning - Flask

--- a/Source/Server/apps/mpconsole/templates/base.html
+++ b/Source/Server/apps/mpconsole/templates/base.html
@@ -184,6 +184,9 @@
 								<li>
 									<a href="{{ url_for('provision.scripts') }}"><i class="fa fa-file-code-o fa-fw"></i> Scripts</a>
 								</li>
+								<li>
+									<a href="{{ url_for('provision.uiConfig') }}"><i class="fa fa-file-o fa-fw"></i> UI Config</a>
+								</li>
 							</ul>
 						</li>
 						<li id="reports">
