--- a/Source/Server/apps/mpconsole/templates/base.html
+++ b/Source/Server/apps/mpconsole/templates/base.html
@@ -185,8 +185,16 @@
 									<a href="{{ url_for('provision.scripts') }}"><i class="fa fa-file-code-o fa-fw"></i> Scripts</a>
 								</li>
 								<li>
-									<a href="{{ url_for('provision.uiConfig') }}"><i class="fa fa-file-o fa-fw"></i> UI Config</a>
+									<a href="{{ url_for('provision.uiConfig') }}"><i class="fa fa-sliders fa-fw"></i> UI Config</a>
 								</li>
+								<li>
+									<a href="{{ url_for('provision.criteria') }}"> <i class="fa fa-code-fork fa-fw"></i> Detection Criteria</a>
+								</li>
+								<!--
+								<li>
+									<a href="{{ url_for('provision.testTask') }}"><i class="fa fa-file-o fa-fw"></i> Test</a>
+								</li>
+								-->
 							</ul>
 						</li>
 						<li id="reports">
