--- a/Source/Server/apps/mpconsole/templates/provision/scripts.html
+++ b/Source/Server/apps/mpconsole/templates/provision/scripts.html
@@ -105,6 +105,7 @@
 				showRefresh: false,
 				resizable: true,
 				sortable: true,
+				sortName: 'order',
 				showColumns: false,
 				icons: {
 					refresh: 'fa fa-refresh',
